api de sensibilisation